--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
   width: 90%;
   height: 50vh;
   padding: 10px;
-  background: #000;
+  background: black;
   color: #0f0;
   border-radius: 10px;
   font-family: monospace;
@@ -39,6 +39,7 @@ body {
 }
 
 .terminal pre {
+  background-color: black;
   margin: 10px;
   padding: 10px;
   transform-origin: top left;
